--- a/ProductionProject/app/build.gradle
+++ b/ProductionProject/app/build.gradle
@@ -36,10 +36,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.2.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation 'com.github.ismaeldivita:chip-navigation-bar:1.2.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
 }
