--- a/ProductionProject/app/src/main/AndroidManifest.xml
+++ b/ProductionProject/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
-        tools:targetApi="31">
+        >
         <activity
             android:name=".startPage"
             android:exported="true"
@@ -26,11 +26,11 @@
         <activity
             android:name=".Register"
             android:exported="false"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
+            android:theme="@style/Theme.Material3.Light.NoActionBar" />
         <activity
             android:name=".Login"
             android:exported="true"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar">
+            android:theme="@style/Theme.Material3.Light.NoActionBar">
         </activity>
         <activity
             android:name=".MainActivity"
